--- a/Eleczone-/nbproject/project.properties
+++ b/Eleczone-/nbproject/project.properties
@@ -29,6 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.javax.servlet-api-4.0.1.jar=G:\\NSBM\\2nd Year\\Java\\javax.servlet-api-4.0.1.jar
+file.reference.jstl-api.jar=G:\\NSBM\\2nd Year\\Java\\jstl-api.jar
+file.reference.jstl-impl.jar=G:\\NSBM\\2nd Year\\Java\\jstl-impl.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=G:\\NSBM\\2nd Year\\Java\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.servlet-api-4.0.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${file.reference.jstl-api.jar}:\
+    ${file.reference.jstl-impl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
